2013-01-24  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc32/power8/Implies: New file: POWER8 support.
	* sysdeps/powerpc/powerpc32/power8/fpu/Implies: New file:
	* sysdeps/powerpc/powerpc64/power8/Implies: New file.
	* sysdeps/powerpc/powerpc64/power8/fpu/Implies: New file.

2013-01-18  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* include/convert.h (DEST_INFINITY): Define correct builtin for double
	and long double.
	(DEST_NAN): Likewise.
	(PREFIXED_FUNCTION_NAME): Reformat.
	* base-math/extendddtf.c (extendddtf): Add volatile to double
	operations to avoid long double optimizations and recursive calls.
	* base-math/extendsdtf.c (extendddtf): Likewise.

2013-01-18  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* libdecnumber/decNumber.c (decSetSubnormal): Remove unused variable.
	* strtod32.c (strtod32): Likewise.

2013-01-17  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/soft-dfp/dpd/numdigits.h (getexp): Simplify code and fix
	issues exp is DECIMAL_BIAS;

2013-01-17  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* ieee754r/isfinited32.c (__finited32d): Change implementation to
	follow isinf and isnan by checking the bits directly.
	* sysdeps/powerpc/dfpu/is_template.h (__isfinite32d): Simplify
	implemenation by checking the cr0 results using C instead of assembly.
	* tests/test-isfinite.c: Unify tests by removing negative results for
	PowerPC HD DFP.

2013-01-17  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* ieee754r/isinfd32.c (__isinfd32): Return -1 for minus infinity and
	+1 for plus infinity.
	* sysdeps/powerpc/dfpu/isinfd128.c (__isinfd128): Use the isinfd32.c
	implementation instead of the is_template.h.
	* sysdeps/powerpc/dfpu/isinfd32.c (__isinfd32): Simplify
	implementation by checking cr1 result and result -1 for minus infinity
	and +1 for plus infinity.
	* tests/test-isinf.c: Add check for minux infinity.

2013-01-14  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
