@@ -1,7 +1,7 @@
 /* Some FPSCR functions.
 
    Copyright (C) 2009 IBM Corporation.
-   Copyright (C) 2007 Free Software Foundation, Inc.
+   Copyright (C) 2007-2014 Free Software Foundation, Inc.
 
    This file is part of the Decimal Floating Point C Library.
 
@@ -32,7 +32,7 @@
 typedef union
 {
   fenv_t fenv;
-  unsigned int l[2];
+  unsigned long long l;
 } fenv_union_t;
 
 # define fegetenv_register() \
